<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:card_view="http://schemas.android.com/apk/res-auto"
  android:id="@+id/cardView"
  android:layout_width="match_parent"
  android:layout_height="wrap_content"
  card_view:cardCornerRadius="8dp"
  card_view:cardElevation="4dp"
  card_view:contentPaddingBottom="20dp"
  >

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <TextView
      android:id="@+id/shopName"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginLeft="36dp"
      android:layout_marginStart="36dp"
      android:layout_marginTop="48dp"
      android:text="@string/product_name"
      android:textSize="42sp"
      card_view:layout_constraintStart_toStartOf="parent"
      card_view:layout_constraintTop_toTopOf="parent"
      />

    <TextView
      android:id="@+id/percent"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="24dp"
      android:layout_marginTop="60dp"
      android:text="@string/discount"
      android:textColor="@color/crimson"
      android:textSize="24sp"
      android:textStyle="bold"
      card_view:layout_constraintBottom_toTopOf="@id/shopName"
      card_view:layout_constraintEnd_toEndOf="@id/shopName"
      card_view:layout_constraintHorizontal_bias="0.651"
      card_view:layout_constraintTop_toTopOf="parent"
      />

    <TextView
      android:id="@+id/numberCard"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="16dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="32dp"
      android:text="@string/product_description"
      android:textSize="24sp"
      card_view:layout_constraintEnd_toEndOf="parent"
      card_view:layout_constraintStart_toStartOf="parent"
      card_view:layout_constraintTop_toBottomOf="@id/shopName"
      />
  </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
