<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:orientation="vertical"
  android:padding="@dimen/padding_medium"
  >

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_small"
    android:hint="@string/login_name"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/tiet_login"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"

      android:inputType="textPersonName"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/til_password"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="@dimen/margin_small"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_large"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    >

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/teit_password"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword"
      />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/btn_ok"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_small"
    android:layout_marginStart="@dimen/margin_small"
    android:layout_marginTop="@dimen/margin_x_large"
    android:text="@string/ok"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />
</LinearLayout>
